packages/ui/src/components/summary/summary.module.css
.root {
  --summary-gap: var(--space-xsmall);
  width: 100%;
}

.items {
  display: flex;
  flex-wrap: wrap;
  width: calc(100% + var(--summary-gap));
  margin-top: calc(0px - var(--summary-gap));
  margin-left: calc(0px - var(--summary-gap));
}

.item {
  margin: var(--summary-gap) 0 0 var(--summary-gap);
  flex: 1 0 10%; /* force equal sizes */
  min-width: 14em;
  text-decoration: none;
}

.readMoreLink {
  appearance: none;
  background: none;
  margin: 0;
  border: 0;
  padding: 0;
  color: var(--color-primary);
  text-decoration: underline;
  cursor: pointer;
}

.readMoreLink:hover,
.readMoreLink:active,
.readMoreLink:focus {
  color: var(--color-primary-dark);
  text-decoration: none;
}

